# J-20260412-001-fy4b-super-resolution

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  check_hdf.py  compare.py  main.py  program.md  progress.md  pyproject.toml  remote_test.sh  send_feishu.py  setup_remote_env.sh  test_methods.sh  utils.py
data/: __init__.py  fy4b_dataset.py
lv1_macro/: README.md  SUMMARY.md  run_all_methods.py  run_all_methods_v2.py  select_best.py
lv1_macro/methods/01_baseline_bicubic/: main.py
lv1_macro/methods/02_baseline_srcnn/: main.py
lv1_macro/methods/03_method_edsr/: main.py
lv1_macro/methods/04_method_pftsr/: main.py
lv1_macro/methods/05_method_swinir/: main.py
lv1_macro/methods/06_method_tinynina/: main.py
lv1_macro/methods/07_method_m2ir/: main.py
lv1_macro/methods/08_method_realrestorer/: main.py
lv1_macro/methods/09_method_lcmsr/: main.py
lv2_micro/: README.md  TARGET_METHOD  analyze.py  results.tsv  run_all_methods.py  run_experiment.sh
lv2_micro/methods/10_method_swinrestorer/: main.py
lv2_micro/methods/11_method_edgepft/: main.py
lv2_micro/methods/12_method_latentswin/: main.py
lv2_micro/methods/13_method_mambapft/: main.py
lv2_micro/methods/14_method_dualscalerestore/: main.py
lv3_fusion/: README.md
preprocessing/: batch_calibrate_ch07_new.py  batch_calibrate_new_data.py
tests/: test_calibration_data.py
