[project]
name = "fy4b-super-resolution"
version = "0.1.0"
description = "FY-4B satellite image super-resolution using PFT-SR"
requires-python = ">=3.11"
dependencies = [
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "h5py>=3.6.0",
    "matplotlib>=3.5.0",
    "pillow>=9.0.0",
    "pyyaml>=6.0",
    "tensorboard>=2.9.0",
    "tqdm>=4.64.0",
    "scikit-image",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501"]
